# rag

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  HOOK.md  IMPLEMENTATION_PLAN.md  RAG问答质量平台-项目规划.md  README.md  RUNBOOK.md  STANDARDS.md  TASK_LOG.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: mainline-quality-gate.yml  release-gate.yml  schema-migration-guard.yml  visual-baseline-sync.yml  visual-regression-e2e.yml
app/: __init__.py  main.py
app/api/: deps.py
app/cli/: common.py  eval.py  import_docs.py  search.py
app/core/: __init__.py  config.py  exceptions.py  observability.py
app/db/: base.py  models.py  session.py  types.py
app/repositories/: rag.py
app/schemas/: documents.py  evals.py  health.py  qa.py  snapshots.py
app/services/: chunking.py  embeddings.py  evaluation.py  generator.py  ingestion.py  qa.py  (+1 more)
docs/: benchmark-report.md  continuous-task-loop.md  visual-regression-baselines.md  简历条目对照表.md
migrations/: env.py
scripts/: continuous_task_loop.py  demo.sh  export_resume_pdfs.py  project_autopilot.py  release_gate.py  render_visual_regression_baselines.py
tests/: conftest.py  test_chunking.py  test_ci_quality_gate.py  test_continuous_task_loop.py  test_database_compatibility.py  test_database_migrations.py  test_e2e_visual_regression.py  test_e2e_workbench.py  test_evaluation.py  test_observability.py  test_project_autopilot.py  test_qa_api.py  test_release_gate.py  test_release_workflow.py  test_retrieval.py  test_visual_baseline_manifest.py  test_visual_regression.py  visual_regression.py
(+208 files in other folders)
